--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>backend2023</title>
-    <p>Clases</p>
+    <title>backend 2023</title>
+    <script type="text/javasscript"> 
+        
+    </script>
+    <script src="ProductManager.js"></script>
 </head>
 <body>
-    <h1>Curso backend2023</h1>
+    <h1>Curso backend 2023</h1>
+    <p>Clases</p>
 </body>
 </html>
